--- a/marriages.html
+++ b/marriages.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birth and Deaths</title>
     <script src="https://unpkg.com/frappe-charts@1.2.4/dist/frappe-charts.min.iife.js"></script>
-    <script type="module" src="js/birthsdeaths.js" defer></script>
+    <script src="js/marriages.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
+    
 </head>
 <body>
     <div id="chart"></div>
